--- a/src/views/os.html
+++ b/src/views/os.html
@@ -3,25 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASISS TI</title>
     <link rel="stylesheet" href="../public/css/bootstrap.min.css">
     <link rel="stylesheet" href="../public/css/style.css">
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
+    <title>Ordem de Serviço</title>
 </head>
 <body>
-<main>
-    <div class="container button">
-        <img src="../public/img/clientes.png" alt="" title="Cadastro de clientes" onclick="cliente()">
-        <img src="../public/img/os.png" alt="" title="Emissão de OS" onclick="os()">
+    <div class="container">
+        <h1>OS</h1>
     </div>
-</main>
-    <footer>
-        <p id="dataAtual"></p>
-    </footer>
-
-
     <script src="../public/js/bootstrap.min.js"></script>
-    <script src="../public/js/script.js"></script>
-    <script src="renderer.js"></script>
 </body>
 </html>
