--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -23,3 +23,12 @@ footer p {
     color: white;
     padding: 5px;
 }
+
+#btnReset {
+    width: 48px;
+    height: 48px;
+    background-image: url(../img/vassoura.png);
+    border: none;
+    cursor: pointer;
+    margin-left: 10px;
+}
