tem que melhorar esse layout

--- a/src/views/os.html
+++ b/src/views/os.html
@@ -20,7 +20,7 @@
                 <label for="searchOS" class="form-label">Pesquisar OS</label>
                 <div class="row">
                     <div class="col-md-4">
-                        <input type="text" class="form-control" id="searchOS" maxlength="30" spellcheck="false">
+                        <input type="text" class="form-control form-control-sm" id="searchOS" maxlength="30" spellcheck="false">
                     </div>
                     <div class="col-md-5">
                         <button type="button" class="btn btn-primary" id="btnRead" onclick="SearchOS()">Buscar</button>
@@ -35,7 +35,7 @@
              <div class="mt-0 row g-2">
                 <div class="col-md-6">
                     <label for="inputClient" class="form-label">Cliente</label>
-                    <input type="text" class="form-control" id="inputClient" maxlength="30" spellcheck="false">
+                    <input type="text" class="form-control form-control-sm" id="inputClient" maxlength="30" spellcheck="false">
                 </div>
                 <div class="col-md-3">
                     <label for="status" class="form-label">Status</label>
@@ -54,20 +54,20 @@
                 <!-- Modelo -->
                 <div class="col-md-6">
                     <label for="inputName" class="form-label">Modelo</label>
-                    <input type="text" class="form-control" id="inputNameClient" spellcheck="false" required
+                    <input type="text" class="form-control form-control-sm" id="inputNameClient" spellcheck="false" required
                         maxlength="30">
                 </div>
 
                 <!-- Número de Série -->
                 <div class="col-md-3">
                     <label for="inputSerieNumber" class="form-label">Número de Série</label>
-                    <input type="text" class="form-control" id="inputSerieNumber" spellcheck="false" maxlength="15">
+                    <input type="text" class="form-control form-control-sm" id="inputSerieNumber" spellcheck="false" maxlength="15">
                 </div>
 
                 <!-- Data -->
                 <div class="col-md-2">
                     <label for="inputDate" class="form-label">Data</label>
-                    <input type="date" class="form-control" id="inputDate" spellcheck="false">
+                    <input type="date" class="form-control form-control-sm" id="inputDate" spellcheck="false">
                 </div>
             </div>
 
@@ -75,7 +75,7 @@
             <!-- Problema -->
             <div class="col-md-12">
                 <label for="inputProblem" class="form-label">Problema relatado</label>
-                <textarea class="form-control" id="textareaProblem" spellcheck="false" rows="2"
+                <textarea class="form-control form-control-sm" id="textareaProblem" spellcheck="false" rows="2"
                     style="resize: none;"></textarea>
             </div>
 
@@ -102,7 +102,7 @@
 
             <!-- 
             <div class="col-md-4">
-                <input type="text" class="form-control" spellcheck="false" maxlength="50">
+                <input type="text" class="form-control form-control-sm" spellcheck="false" maxlength="50">
             </div>
             <div class="col-md-4">
                 <input type="text" class="form-control" spellcheck="false" maxlength="50">
