--- a/src/views/cliente.html
+++ b/src/views/cliente.html
@@ -48,7 +48,7 @@
             <!-- CEP -->
             <div class="col-md-2">
                 <label for="inputCEPClient" class="form-label">CEP</label>
-                <input type="text" class="form-control" id="inputCEPClient" spellcheck="false" required maxlength="9">
+                <input type="text" class="form-control" id="inputCEPClient" spellcheck="false" required maxlength="9" onblur="buscarCEP()">
             </div>
 
             <!-- Logradouro -->
@@ -87,7 +87,7 @@
             <!-- UF -->
             <div class="col-md-3">
                 <label for="inputUFCliente" class="form-label">UF</label>
-                <select class="form-select" id="inputUFCliente" name="UF" required>
+                <select class="form-select" id="inputUFClient" name="UF" required>
                     <option value=""></option>
                     <option value="AC">AC - Acre</option>
                     <option value="AL">AL - Alagoas</option>
@@ -129,5 +129,6 @@
         </form>
     </div>
     <script src="../public/js/bootstrap.min.js"></script>
+    <script src="rendererCliente.js"></script>
 </body>
 </html>
