--- a/src/views/os.html
+++ b/src/views/os.html
@@ -20,7 +20,8 @@
                 <label for="searchOS" class="form-label">Pesquisar OS</label>
                 <div class="row">
                     <div class="col-md-4">
-                        <input type="text" class="form-control form-control-sm" id="searchOS" maxlength="30" spellcheck="false">
+                        <input type="text" class="form-control form-control-sm" id="searchOS" maxlength="30"
+                            spellcheck="false">
                     </div>
                     <div class="col-md-5">
                         <button type="button" class="btn btn-primary" id="btnRead" onclick="SearchOS()">Buscar</button>
@@ -32,10 +33,11 @@
 
 
             <!-- Buscar Cliente cadastrado pelo nome -->
-             <div class="mt-0 row g-2">
+            <div class="mt-0 row g-2">
                 <div class="col-md-6">
                     <label for="inputClient" class="form-label">Cliente</label>
-                    <input type="text" class="form-control form-control-sm" id="inputClient" maxlength="30" spellcheck="false">
+                    <input type="text" class="form-control form-control-sm" id="inputClient" maxlength="30"
+                        spellcheck="false">
                 </div>
                 <div class="col-md-3">
                     <label for="status" class="form-label">Status</label>
@@ -46,22 +48,23 @@
                         <option value="4">Cancelada</option>
                     </select>
                 </div>
-             </div>
-            
+            </div>
+
 
 
             <div class="row mt-2 g-1">
                 <!-- Modelo -->
                 <div class="col-md-6">
                     <label for="inputName" class="form-label">Modelo</label>
-                    <input type="text" class="form-control form-control-sm" id="inputNameClient" spellcheck="false" required
-                        maxlength="30">
+                    <input type="text" class="form-control form-control-sm" id="inputNameClient" spellcheck="false"
+                        required maxlength="30">
                 </div>
 
                 <!-- Número de Série -->
                 <div class="col-md-3">
                     <label for="inputSerieNumber" class="form-label">Número de Série</label>
-                    <input type="text" class="form-control form-control-sm" id="inputSerieNumber" spellcheck="false" maxlength="15">
+                    <input type="text" class="form-control form-control-sm" id="inputSerieNumber" spellcheck="false"
+                        maxlength="15">
                 </div>
 
                 <!-- Data -->
@@ -74,13 +77,28 @@
 
             <!-- Problema -->
             <div class="col-md-12">
-                <label for="inputProblem" class="form-label">Problema relatado</label>
-                <textarea class="form-control form-control-sm" id="textareaProblem" spellcheck="false" rows="2"
+                <label for="textareaProblem" class="form-label">Problema relatado</label>
+                <textarea class="form-control form-control-sm" id="textareaProblem" spellcheck="false" rows="3"
                     style="resize: none;"></textarea>
             </div>
 
             <!-- Serviços -->
-            <div class="mt-2 row g-1">
+            <div class="mt-1 row g-2">
+                <div class="col-md">
+                    <label for="inputDescription" class="form-label">Parecer técnico</label>
+                    <textarea class="form-control form-control-sm" id="inputDescription" spellcheck="false" rows="3"
+                        style="resize: none;"></textarea>
+                </div>
+            </div>
+            <div class="mt-1 row g-2">
+                <div class="col-md-2" id="total">
+                    <label for="price" class="form-label" id="label-total">TOTAL</label>
+                    <input type="number" class="form-control form-control-sm" spellcheck="false" id="price" min="0.00" max="99999.99">
+                </div>
+            </div>
+            
+
+            <!-- <div class="mt-2 row g-1">
                 <div class="col-md-8">
                     <div class="mt-1 row g-1" id="servicos">
 
@@ -90,15 +108,15 @@
                     <h3>Total</h3>
                     <div id="total"></div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Serviços -->
-            <div class="mt-2 row g-2">
+            <!-- <div class="mt-2 row g-2">
                 <div class="col-md-4">
                     <button type="button" class="btn btn-primary" id="btnRegister" onclick="addService()">Adicionar
                         serviço</button>
                 </div>
-            </div>
+            </div> -->
 
             <!-- 
             <div class="col-md-4">
