--- a/src/views/cliente.html
+++ b/src/views/cliente.html
@@ -16,7 +16,7 @@
                 <input type="text" class="form-control" id="searchClient" maxlength="30" spellcheck="false">
             </div>
             <div class="col-md-4">
-                <button type="button" class="btn btn-primary" id="btnRead" onclick="SearchClient()">Buscar</button>
+                <button type="button" class="btn btn-primary" id="btnRead" onclick="search()">Buscar</button>
             </div>
             <hr class="mt-4 border border-primary border -1">
 
@@ -29,7 +29,7 @@
             <!-- CPF -->
             <div class="col-md-4">
                 <label for="inputCPFClient" class="form-label">CPF</label>
-                <input type="text" class="form-control" id="inputCPFClient" spellcheck="false" maxlength="15">
+                <input type="text" class="form-control" id="inputCPFClient" spellcheck="false" required maxlength="15">
             </div>
 
             <!-- e-mail -->
